--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glhera-query",
-  "version": "1.1.0",
+  "version": "2.0.0-next.0",
   "author": "Simple Organization",
   "scripts": {
     "build": "tsc && rollup -c && node esbuild.mjs",
