--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glhera-query",
-  "version": "2.0.0-next.0",
+  "version": "2.0.0-next.1",
   "author": "Simple Organization",
   "scripts": {
     "build": "tsc && rollup -c && node esbuild.mjs",
@@ -16,12 +16,12 @@
   "bugs": "https://github.com/Simple-Organization/glhera-query/issues",
   "license": "MIT",
   "devDependencies": {
+    "@playwright/test": "^1.46.0",
     "esbuild": "^0.23.0",
     "prettier": "^3.3.3",
     "rollup": "^4.20.0",
     "rollup-plugin-dts": "^6.1.1",
-    "typescript": "^5.5.4",
-    "@playwright/test": "^1.46.0"
+    "typescript": "^5.5.4"
   },
   "files": [
     "dist/index.d.ts",
@@ -29,5 +29,8 @@
   ],
   "types": "dist/index.d.ts",
   "type": "module",
-  "packageManager": "pnpm@9.6.0"
+  "packageManager": "pnpm@9.6.0",
+  "dependencies": {
+    "signal-factory": "1.0.0-next.0"
+  }
 }
