--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@playwright/test": "^1.46.1",
     "esbuild": "^0.23.1",
     "prettier": "^3.3.3",
-    "rollup": "^4.21.0",
+    "rollup": "^4.21.2",
     "rollup-plugin-dts": "^6.1.1",
     "typescript": "^5.5.4"
   },
@@ -31,6 +31,6 @@
   "type": "module",
   "packageManager": "pnpm@9.6.0",
   "dependencies": {
-    "signal-factory": "1.0.0-next.6"
+    "simorg-store": "1.0.0-next.1"
   }
 }
